syntax = "proto3";

option go_package = "../userproto";

package user;

service UserService {
  rpc Me (MeReq) returns (MeResp) {}
  rpc GetUserByGoogleId (GetUserByGoogleIdReq) returns (GetUserByGoogleIdResp) {}
  rpc CreateUser (CreateUserReq) returns (CreateUserResp) {}
}

message User {
  string id = 1;
  string role = 2;
  string email = 3;
  string google_id = 4;
}

message MeReq {}

message MeResp {
  User user = 1;
}

message GetUserByGoogleIdReq {
  string google_id = 1;
}

message GetUserByGoogleIdResp {
  User user = 1;
}

message CreateUserReq {
  string email = 1;
  string google_id = 2;
}

message CreateUserResp {
  User user = 1;
}
